--- a/src/locales/de.json
+++ b/src/locales/de.json
@@ -794,6 +794,7 @@
             "Circle": "Kreis",
             "Control": "Steuerung",
             "Cross": "Kreuz",
+            "HideDuringPrint": "Achsensteuerung während des Drucks ausblenden",
             "EnableXYHoming": "Aktiviere kombiniertes X & Y homing",
             "EstimatedExtrusionInfo": "Zeige Info zur geschätzten Extrusion",
             "EstimatedExtrusionInfoDescription": "Anzeigen/ausblenden der Info zur geschätzten Extrusion, basierend auf Extrusionmenge und Extrusionsgeschwindigkeit",
@@ -1060,6 +1061,11 @@
             "ConfirmOnEmergencyStopDescription": "Zeige vor einem Notstop einen Bestätigungsdialog.",
             "ConfirmOnPowerDeviceChange": "Bestätigung für Änderung der Stromversorgung von Geräten",
             "ConfirmOnPowerDeviceChangeDescription": "Zeige vor Änderung der Stromversorgung von Geräten einen Bestätigungsdialog.",
+            "DefaultNavigationState": "Standard Navigationszustand",
+            "DefaultNavigationStateAlwaysClosed": "immer geschlossen",
+            "DefaultNavigationStateAlwaysOpen": "immer geöffnet",
+            "DefaultNavigationStateDescription": "Welchen zustand soll die Navigation normalerweise haben?",
+            "DefaultNavigationStateLastState": "letzter Zustand",
             "DisableFanAnimation": "Lüfteranimation deaktivieren",
             "DisableFanAnimationDescription": "Dies kann die Last im Browser senken.",
             "DisplayCANCEL_PRINT": "Zeige CANCEL_PRINT an",
