--- a/src/locales/de.json
+++ b/src/locales/de.json
@@ -1075,6 +1075,8 @@
             "HideSaveConfigButtonForBedMeshDescription": "SAVE_CONFIG nicht anzeigen, wenn nur das Speichern eines bed_mesh in Klipper aussteht.",
             "HideUpdateWarnings": "Aktualisierungswarnungen ausblenden",
             "HideUpdateWarningsDescription": "Mit dieser Option werden alle Aktualisierungswarnungen im Aktualisierungsmanager ausgeblendet.",
+            "HideUpdateWarnings": "Anomaliewarnung im Repo ausblenden",
+            "HideUpdateWarningsDescription": "Mit dieser Option werden alle Anomaliewarnungen im Aktualisierungsmanager ausgeblendet.",
             "LockSliders": "Sperre Schieberegler auf Touchscreen Geräten",
             "LockSlidersDelay": "Verzögerung der Sperre für Schieberegler",
             "LockSlidersDelayDescription": "Schieberegler werden nach einer bestimmten Verzögerung gesperrt. Wenn 0 oder leer, dann sperren Schieberegler nur nach wechseln/neuladen der Seite.",
