--- a/src/locales/de.json
+++ b/src/locales/de.json
@@ -680,6 +680,7 @@
                 "Temperature": "Aktuelle Temperatur"
             },
             "Headline": "Temperaturen",
+            "HideMcuHostSensors": "Host/MCU Sensoren ausblenden",
             "Max": "max",
             "Min": "min",
             "Name": "Name",
@@ -1075,8 +1076,8 @@
             "HideSaveConfigButtonForBedMeshDescription": "SAVE_CONFIG nicht anzeigen, wenn nur das Speichern eines bed_mesh in Klipper aussteht.",
             "HideUpdateWarnings": "Aktualisierungswarnungen ausblenden",
             "HideUpdateWarningsDescription": "Mit dieser Option werden alle Aktualisierungswarnungen im Aktualisierungsmanager ausgeblendet.",
-            "HideUpdateWarnings": "Anomaliewarnung im Repo ausblenden",
-            "HideUpdateWarningsDescription": "Mit dieser Option werden alle Anomaliewarnungen im Aktualisierungsmanager ausgeblendet.",
+            "HideUpdateAnomalies": "Anomaliewarnung im Repo ausblenden",
+            "HideUpdateAnomaliesDescription": "Mit dieser Option werden alle Anomaliewarnungen im Aktualisierungsmanager ausgeblendet.",
             "LockSliders": "Sperre Schieberegler auf Touchscreen Geräten",
             "LockSlidersDelay": "Verzögerung der Sperre für Schieberegler",
             "LockSlidersDelayDescription": "Schieberegler werden nach einer bestimmten Verzögerung gesperrt. Wenn 0 oder leer, dann sperren Schieberegler nur nach wechseln/neuladen der Seite.",
@@ -1105,6 +1106,7 @@
             "EditWebcam": "Webcam bearbeiten",
             "FlipWebcam": "Webcam-Bild spiegeln:",
             "Hlsstream": "HLS-Stream",
+            "HideFps": "FPS-Anzeige verstecken",
             "Horizontally": "horizontal",
             "IconBed": "Bett",
             "IconCam": "Kamera",
