--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -513,10 +513,6 @@
             "KlipperUpdateQuestionConfig": "This update may also contain changes to config parameters that would need to be modified in the printer.cfg file, see the change log for details.",
             "MoonrakerUpdateQuestion": "This will update the Moonraker API. Changes to the moonraker.conf file may be required to continue using the machine.",
             "MoreCommitsInfo": "A maximum of 30 commits can be displayed here. To see all commits, please click on the following link:",
-            "Notification": {
-                "Detached": "Detached state is not an error nor is it a problem. It only means that additional commits exist in the local repository that do not exist in the remote repository.",
-                "Dirty": "The local repository has been modified and cannot be updated in this state. Please recover this repository."
-            },
             "OSPackages": "OS-Packages",
             "SoftRecovery": "Soft Recovery",
             "StartUpdate": "Start Update",
@@ -690,6 +686,7 @@
             },
             "Headline": "Temperatures",
             "HideMcuHostSensors": "Hide Host/MCU Sensors",
+            "HideMonitors": "Hide Monitors",
             "Max": "max",
             "Min": "min",
             "Name": "Name",
@@ -1063,6 +1060,7 @@
         "UiSettingsTab": {
             "BedScrewsDialog": "Bed Screws Dialog",
             "BedScrewsDialogDescription": "Display helper dialog for BED_SCREWS_ADJUST.",
+            "BigThumbnailBackground": "Large thumbnail background color",
             "BoolBigThumbnail": "Large thumbnail",
             "BoolBigThumbnailDescription": "Display a large thumbnail in the status panel during a print.",
             "BoolHideUploadAndPrintButton": "Hide Upload and Print Button",
@@ -1089,6 +1087,8 @@
             "HideUpdateWarningsDescription": "This option will hide all update warnings in the update manager.",
             "HideUpdateAnomalies": "Hide Update Anomalies",
             "HideUpdateAnomaliesDescription": "This option will hide all update anomalies in the update manager.",
+            "HideMiscellaneousLight": "Hide RGB-LED color-picker",
+            "HideMiscellaneousLightDescription": "This option will hide the RGB-LED color-picker in the Miscellaneous tab on the Dashboard.",
             "LockSliders": "Lock sliders on touchscreen devices",
             "LockSlidersDelay": "Slider lock delay",
             "LockSlidersDelayDescription": "Sliders will lock after a given delay. If set to 0 or left blank, sliders will only lock on page change/reload.",
