--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -990,6 +990,16 @@
             "Warning": "warning"
         },
         "MiscellaneousTab": {
+            "HideMiscellaneousLight": "Hide RGB-LED color-picker",
+            "HideMiscellaneousLightDescription": "This option will hide the RGB-LED color-picker in the Miscellaneous tab on the Dashboard.",
+            "ShowDetectionLength": "Show Detection Length",
+            "ShowDetectionLengthDescription": "This option will show the detection_length of a filament_motion_sensor.",
+            "HideDetectionLengthOnDisabled": "Hide Detection Length on Disabled",
+            "HideDetectionLengthOnDisabledDescription": "Hide the detection_length when the sensor is disabled.",
+            "ShowRunoutDistance": "Show Runout Distance",
+            "ShowRunoutDistanceDescription": "This option will show the runout_distance of a filament_switch_sensor.",
+            "HideRunoutDistanceOnDisabled": "Hide Runout Distance on Disabled",
+            "HideRunoutDistanceOnDisabledDescription": "Hide the runout_distance when the sensor is disabled.",
             "AddGroup": "add group",
             "AddPreset": "add preset",
             "Color": "Color",
@@ -1144,8 +1154,6 @@
             "HideUpdateWarningsDescription": "This option will hide all update warnings in the update manager.",
             "HideUpdateAnomalies": "Hide Update Anomalies",
             "HideUpdateAnomaliesDescription": "This option will hide all update anomalies in the update manager.",
-            "HideMiscellaneousLight": "Hide RGB-LED color-picker",
-            "HideMiscellaneousLightDescription": "This option will hide the RGB-LED color-picker in the Miscellaneous tab on the Dashboard.",
             "LockSliders": "Lock sliders on touchscreen devices",
             "LockSlidersDelay": "Slider lock delay",
             "LockSlidersDelayDescription": "Sliders will lock after a given delay. If set to 0 or left blank, sliders will only lock on page change/reload.",
