--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -393,6 +393,7 @@
             "completed": "Completed",
             "error": "Error",
             "in_progress": "In progress",
+            "interrupted": "Interrupted",
             "klippy_disconnect": "Klippy disconnect",
             "klippy_shutdown": "Klippy shutdown",
             "Others": "Others",
@@ -607,10 +608,14 @@
             "Headline": "Machine",
             "MotionSettings": {
                 "Acceleration": "Acceleration",
+                "XAcceleration": "X-Acceleration",
+                "YAcceleration": "Y-Acceleration",
                 "MaxAccelToDecel": "Max Accel. to Decel.",
                 "MinimumCruiseRatio": "Min. Cruise Ratio",
                 "SquareCornerVelocity": "Square Corner Velocity",
-                "Velocity": "Velocity"
+                "Velocity": "Velocity",
+                "XVelocity": "X-Velocity",
+                "YVelocity": "Y-Velocity"
             }
         },
         "MacrosPanel": {
