--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -147,6 +147,20 @@
         "SendCode": "Send code...",
         "SetupConsole": "Setup Console"
     },
+    "DevicesDialog": {
+        "CanBusInfo": "Only unassigned nodes can be detected. It’s recommended to have only one unassigned device connected to the can bus to avoid communication issues. For more details, please click on the link:",
+        "ClickRefresh": "Click on the refresh button to search for devices.",
+        "DevicePath": "Device path",
+        "Formats": "Formats",
+        "Headline": "Devices",
+        "HideSystemEntries": "Hide system entries",
+        "LibcameraId": "Libcamera ID",
+        "NoDeviceFound": "No device found. Please check the connection and click on the refresh button.",
+        "PathByHardware": "Path by hardware",
+        "PathById": "Path by ID",
+        "Refresh": "refresh",
+        "Resolutions": "Resolutions"
+    },
     "Dialogs": {
         "StartPrint": {
             "Cancel": "Cancel",
@@ -159,6 +173,7 @@
     },
     "Editor": {
         "ConfigReference": "Config Reference",
+        "DeviceDialog": "Devices",
         "DontSave": "Don't save",
         "Downloading": "Downloading",
         "FailedSave": "{filename} could not be uploaded!",
