--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -804,7 +804,7 @@
             "Headline": "Temperatures",
             "HideMcuHostSensors": "Hide Host/MCU Sensors",
             "HideMonitors": "Hide Monitors",
-            "HidePIDProfiles": "Hide PID-Profiles",
+            "HideHeaterProfiles": "Hide Heater Profiles",
             "Max": "max",
             "Min": "min",
             "Name": "Name",
@@ -814,9 +814,9 @@
             "ShowNameInChart": "Show {name} in chart",
             "ShowNameInList": "Show {name} in list",
             "DisplayName": "Display name",
-            "PIDProfile": "PID-Profile",
-            "UnknownPIDProfile": "Unknown PID-Profile [{profile}] for Heater [{heater}]",
-            "PIDProfileNotAllowed": "PID-Profile does not exist",
+            "HeaterProfile": "PID-Profile",
+            "UnknownHeaterProfile": "Unknown PID-Profile [{profile}] for Heater [{heater}]",
+            "HeaterProfileNotAllowed": "PID-Profile does not exist",
             "State": "State",
             "Target": "Target",
             "TemperaturesInChart": "Temperature [°C]",
@@ -1301,6 +1301,8 @@
             "PowerDeviceName": "Printer power device",
             "PowerDeviceNameDescription": "Select which Moonraker power device should be used to power on the printer.",
             "Primary": "Primary",
+            "PrintstatusThumbnailZoom": "Large thumbnail zoom",
+            "PrintstatusThumbnailZoomDescription": "This will deactivate the zoom effect on the thumbnail in the status panel.",
             "ProgressAsFavicon": "Show progress as favicon",
             "ProgressAsFaviconDescription": "Change the Mainsail logo favicon to a progress circle.",
             "ScrewsTiltAdjustDialog": "Screws Tilt Adjust Dialog",
