--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -1333,7 +1333,7 @@
             "ProgressAsFaviconDescription": "Change the Mainsail logo favicon to a progress circle.",
             "ScrewsTiltAdjustDialog": "Screws Tilt Adjust Dialog",
             "ScrewsTiltAdjustDialogDescription": "Display helper dialog for SCREWS_TILT_CALCULATE.",
-            "TempchartHeight": "Height Temperature Chart",
+            "TempchartHeight": "Temperature Chart Height",
             "TempchartHeightDescription": "Modify the height of the temperature chart on the Dashboard.",
             "Theme": "Theme",
             "ThemeDark": "Dark",
